test/com/facebook/buck/parser/testdata/python_user_defined_rules/errors/missing_mandatory_params/BUCK.fixture
load("//simple:simple_rule.bzl", "simple_rule")

simple_rule(name = "missing_mandatory")
